Hieu add contact form

--- a/footer.html
+++ b/footer.html
@@ -39,14 +39,16 @@
             </div>
         </div>
 
-        <!-- Newsletter -->
+        <!-- Contact CTA -->
         <div class="newsletter">
-            <h3>Đăng ký nhận tin</h3>
-            <p>Đăng ký nhận tin mới nhất từ chúng tôi</p>
-            <form class="newsletter-form">
-                <input type="email" placeholder="Nhập E-mail của bạn">
-                <button type="submit">GỬI</button>
-            </form>
+            <h3>Liên hệ tư vấn</h3>
+            <p>Để lại thông tin để được tư vấn miễn phí</p>
+            <a href="contact-form.html" class="contact-cta-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
+                </svg>
+                Liên hệ ngay
+            </a>
         </div>
 
     </div>
