add(product-detail): customize the qr and product detail

--- a/header.html
+++ b/header.html
@@ -18,18 +18,9 @@
 
         <!-- Right: Actions -->
         <div class="nav-actions">
-            <!-- Search Box -->
-            <div class="search-box">
-                <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
-                    <circle cx="8" cy="8" r="6" stroke="white" stroke-width="1.5" />
-                    <line x1="12.5" y1="12.5" x2="16" y2="16" stroke="white" stroke-width="1.5"
-                        stroke-linecap="round" />
-                </svg>
-                <input type="text" placeholder="Tìm kiếm sản phẩm">
-            </div>
 
             <!-- Contact Button -->
-            <button class="contact-btn">Liên hệ</button>
+            <button class="contact-btn" id="contactBtn">Liên hệ</button>
         </div>
     </div>
 </nav>
