--- a/products.html
+++ b/products.html
@@ -277,184 +277,8 @@
                     </div>
 
                     <!-- Products Grid -->
-                    <div class="products-display-grid">
-                        <!-- Row 1 -->
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/15f429f06284eedab795.jpg" alt="Gương 1">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 1</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/a51ac20c897805265c69.jpg" alt="Gương 2">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 2</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/e9d657e91c9d90c3c98c.jpg" alt="Gương 3">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 3</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/f0da71ed3a99b6c7ef88.jpg" alt="Gương 4">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 4</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <!-- Row 2 -->
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/15f429f06284eedab795.jpg" alt="Gương 5">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 5</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/a51ac20c897805265c69.jpg" alt="Gương 6">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 6</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/e9d657e91c9d90c3c98c.jpg" alt="Gương 7">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 7</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/f0da71ed3a99b6c7ef88.jpg" alt="Gương 8">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 8</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <!-- Row 3 -->
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/15f429f06284eedab795.jpg" alt="Gương 1">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 1</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/a51ac20c897805265c69.jpg" alt="Gương 2">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 2</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/e9d657e91c9d90c3c98c.jpg" alt="Gương 3">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 3</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/f0da71ed3a99b6c7ef88.jpg" alt="Gương 4">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 4</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <!-- Row 4 -->
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/15f429f06284eedab795.jpg" alt="Gương 5">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 5</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/a51ac20c897805265c69.jpg" alt="Gương 6">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 6</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/e9d657e91c9d90c3c98c.jpg" alt="Gương 7">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 7</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-
-                        <div class="product-item">
-                            <div class="product-item-image">
-                                <img src="productImage/f0da71ed3a99b6c7ef88.jpg" alt="Gương 8">
-                            </div>
-                            <div class="product-item-info">
-                                <h3>GƯƠNG 8</h3>
-                                <p>xxx.000 đ</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Pagination -->
-                    <div class="pagination">
-                        <button class="pagination-btn" disabled>«</button>
-                        <button class="pagination-btn active">1</button>
-                        <button class="pagination-btn">2</button>
-                        <button class="pagination-btn">3</button>
-                        <button class="pagination-btn">4</button>
-                        <button class="pagination-btn">5</button>
-                        <button class="pagination-btn">6</button>
-                        <button class="pagination-btn">7</button>
-                        <button class="pagination-btn">8</button>
-                        <button class="pagination-btn">»</button>
+                    <div class="products-display-grid" id="productsGrid">
+                        <!-- Products will be loaded dynamically from products-data.js -->
                     </div>
                 </div>
             </div>
@@ -466,9 +290,37 @@
 
     <!-- Scripts -->
     <script src="include.js"></script>
+    <script src="products-data.js"></script>
     <script>
-        // Category filter functionality
+        // Load and display products
         document.addEventListener('DOMContentLoaded', function () {
+            const productsGrid = document.getElementById('productsGrid');
+            
+            // Render products from data
+            function renderProducts(products) {
+                productsGrid.innerHTML = '';
+                products.forEach(product => {
+                    const productItem = document.createElement('div');
+                    productItem.className = 'product-item';
+                    productItem.setAttribute('data-product-id', product.id);
+                    productItem.innerHTML = `
+                        <div class="product-item-image">
+                            <img src="${product.image}" alt="${product.name}">
+                        </div>
+                        <div class="product-item-info">
+                            <h3>${product.name}</h3>
+                            <p>${product.price}</p>
+                        </div>
+                    `;
+                    productsGrid.appendChild(productItem);
+                });
+            }
+
+            // Load all products
+            const allProducts = getAllProducts();
+            renderProducts(allProducts);
+
+            // Category filter functionality
             const categoryItems = document.querySelectorAll('.category-item');
 
             categoryItems.forEach(item => {
@@ -480,7 +332,9 @@
 
                     const category = this.getAttribute('data-category');
                     console.log('Selected category:', category);
-                    // Add filter logic here
+                    // Add filter logic here if needed
+                    // For now, show all products
+                    renderProducts(allProducts);
                 });
             });
 
@@ -509,15 +363,15 @@
                 });
             });
 
-            // Product item click - Navigate to detail page
-            const productItems = document.querySelectorAll('.product-item');
-            productItems.forEach(item => {
-                item.addEventListener('click', function () {
-                    const productName = this.querySelector('h3').textContent;
-                    console.log('Clicked product:', productName);
-                    // Navigate to product detail page
-                    window.location.href = 'product-detail.html';
-                });
+            // Product item click - Navigate to detail page with product ID
+            productsGrid.addEventListener('click', function (e) {
+                const productItem = e.target.closest('.product-item');
+                if (productItem) {
+                    const productId = productItem.getAttribute('data-product-id');
+                    console.log('Clicked product ID:', productId);
+                    // Navigate to product detail page with ID
+                    window.location.href = `product-detail.html?id=${productId}`;
+                }
             });
         });
     </script>
