add: seo website

--- a/ar.html
+++ b/ar.html
@@ -597,7 +597,7 @@
                 <div class="qr-code-container">
                     <div class="qr-code">
                         <!-- QR Code placeholder - replace with actual QR code image -->
-                        <img src="img/frame 1.png" alt="QR Code">
+                        <img src="DemoImage/qr/qr_all.jpg" alt="QR Code">
                     </div>
                 </div>
             </div>
