Add Google Analytics G-0PHN701NNY

--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo/favicon-logo.png">
     
+    <!-- Google Analytics -->
+    <script src="google-analytics.js"></script>
+    
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Additional styles for about page */
