--- a/ar.html
+++ b/ar.html
@@ -9,6 +9,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo/favicon-logo.png">
     
+    <!-- Google Analytics -->
+    <script src="google-analytics.js"></script>
+    
     <link rel="stylesheet" href="styles.css">
     <style>
         /* AR Page Styles */
