--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <link rel="icon" type="image/png" href="logo/favicon-logo.png">
     <link rel="apple-touch-icon" href="logo/favicon-logo.png">
 
+    <!-- Google Analytics -->
+    <script src="google-analytics.js"></script>
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css">
 
