--- a/product-detail.html
+++ b/product-detail.html
@@ -20,6 +20,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="logo/favicon-logo.png">
     
+    <!-- Google Analytics -->
+    <script src="google-analytics.js"></script>
+    
     <link rel="stylesheet" href="styles.css">
     <!-- Import model-viewer library -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
