--- a/footer.html
+++ b/footer.html
@@ -23,7 +23,7 @@
                 <p><a href="mailto:Artmirror@gmail.com">Artmirror@gmail.com</a> or</p>
                 <p>Facebook Contact:</p>
                 <p>
-                    <a href="https://www.facebook.com/ArtMirror" target="_blank">
+                    <a href="https://www.facebook.com/profile.php?id=61586792944191" target="_blank">
                         https://www.facebook.com/ArtMirror
                     </a>
                 </p>
